front-end/kubernetes/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: forum-ui-svc
spec:
  selector:
    app: forum-ui-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30001
  type: NodePort
